Update lower level

--- a/sofle/keymap/keymapviz.toml
+++ b/sofle/keymap/keymapviz.toml
@@ -5,16 +5,20 @@ KC_ASTR=*
 KC_AT=@
 KC_BSLS=\ |
 KC_CIRC=^
+KC_COLN=:
 KC_COMM=, >
 KC_DLR=$
 KC_DOT=. <
+KC_DQUO="
 KC_EQL== +
 KC_EXLM=!
 KC_GRV=` ~
+KC_GT=>
 KC_HASH=#
 KC_LBRC=[
 KC_LCBR={
 KC_LPRN=(
+KC_LT=<
 KC_MINS=- _
 KC_PERC=%
 KC_PIPE=|
