Replace tap dance with mod tap

--- a/sofle/keymap/keymapviz.toml
+++ b/sofle/keymap/keymapviz.toml
@@ -33,6 +33,7 @@ KC_SCLN=; :
 KC_SLSH=/ ?
 KC_TILD=~
 KC_UNDS=_
-OSM_LSFT=OSSft
-TD_LSFT=Shift
-TD_RSFT=Shift
+OSM_LSFT=Shift
+OSM_RSFT=Shift
+MD_LGUI=Super
+MD_RGUI=Super
