Modify numpad and fix visualization

--- a/sofle/keymap/keymapviz.toml
+++ b/sofle/keymap/keymapviz.toml
@@ -21,9 +21,14 @@ KC_LCBR={
 KC_LPRN=(
 KC_LT=<
 KC_MINS=- _
+KC_PAST=*
+KC_PDOT=.
 KC_PERC=%
 KC_PIPE=|
 KC_PLUS=+
+KC_PMNS=-
+KC_PPLS=+
+KC_PSLS=/
 KC_QUES=?
 KC_QUOT=' "
 KC_RBRC=]
@@ -33,7 +38,8 @@ KC_SCLN=; :
 KC_SLSH=/ ?
 KC_TILD=~
 KC_UNDS=_
-OSM_LSFT=Shift
-OSM_RSFT=Shift
+MT_ENT=ENT+Numpad
 MT_LGUI=Super
 MT_RGUI=Super
+OSM_LSFT=Shift
+OSM_RSFT=Shift
